# Drosophila

./: io.github.ergolyam.Drosophila.yml  license  pyproject.toml  readme.md
.github/docs/: development.md
.github/workflows/: appimage-publish.yml  flatpak-publish.yml
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/delta-indexes/+l/: KeVXq86tTtbrCYywA0z6THMgtoQVQnnAFlWryj4Q0.index
repo/delta-indexes/Fd/: slce06FSMSMpFyoI1nusUR8e67nkhcu+2k6DyVpo4.index
repo/delta-indexes/MM/: Aqg+c_RYrlLeSURD8_6crIiEYc5dLNmAuZjL++vsA.index
repo/delta-indexes/W3/: Z95BuXs5tibGPuytz_GSJXu3KyElJiOIBJSgkXt3c.index
repo/delta-indexes/Y9/: TXUo+WtK2RUNKXxzQki9cUHttXc99WvqIsvt1Rpmg.index
repo/delta-indexes/gX/: J_wWoiWtEL82UuKp6MkSI2b2wgwXGkO2k4eEZVk2k.index
repo/delta-indexes/iu/: s2EXdKchvmxrExtwPtSIxr2fHACtfVYr0OPNjrTQw.index
repo/delta-indexes/zS/: mlQexdRCGegFFW2VQPi2aizUZ7LoJkarI1pokcpSM.index
repo/deltas/+l/KeVXq86tTtbrCYywA0z6THMgtoQVQnnAFlWryj4Q0/: 0  superblock
repo/deltas/Fd/slce06FSMSMpFyoI1nusUR8e67nkhcu+2k6DyVpo4/: 0  superblock
repo/deltas/MM/Aqg+c_RYrlLeSURD8_6crIiEYc5dLNmAuZjL++vsA/: 0  superblock
repo/deltas/W3/Z95BuXs5tibGPuytz_GSJXu3KyElJiOIBJSgkXt3c/: 0  superblock
repo/deltas/Y9/TXUo+WtK2RUNKXxzQki9cUHttXc99WvqIsvt1Rpmg/: 0  superblock
xdg/: io.github.ergolyam.Drosophila.desktop  io.github.ergolyam.Drosophila.metainfo.xml  io.github.grisha765.Drosophila.metainfo.xml
yggui/core/: common.py  window.py
yggui/exec/: pkexec_shell.py  shell.py
yggui/funcs/: peers.py
yggui/ui/: about_dialog.ui
(+14 files in other folders)
