[build-system]
requires = ["setuptools>=69", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Drosophila"
dynamic = ["version"]
description = "Simple Libadwaita/GTK 4 frontend that shows status and lets you control Yggdrasil."
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "pygobject>=3.52.2",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "yggui/_version.py"

[project.scripts]
yggui = "yggui.__main__:main"

[tool.setuptools.packages.find]
include = ["yggui*"]

[tool.setuptools.package-data]
"yggui.ui" = ["*.ui", "*.css"]

[tool.uv]
package = false

[tool.pyright]
venvPath = '.'
venv = '.venv'
exclude = [
  "**/__pycache__",
  "build/**",
  "dist/**",
  ".flatpak-builder/**",
  "build-dir/**",
]
